traces/bug_659.txt
src/fflib/lgfem.cpp:878: error: DEAD_STORE
  The value written to &gcverb (type long) is never used.
Showing all 1 steps of the trace


src/fflib/lgfem.cpp:878:3: Write of unused value
876.         if (nargs[6]) stop= new E_StopGC<R>(stack,n,dynamic_cast<const  Polymorphic *>(nargs[6]));
877.   
878.   	 long gcverb=51L-Min(Abs(verb),50L);
         ^
879.   	 
880.        
